REGRESSION (r137607): Cannot download files, stuck in “Preparing to download” https://bugs.webkit.org/show_bug.cgi?id=105044

Reviewed by Antti Koivisto.

The work done by DocumentLoader::mainReceivedError() changed subtly in r137607,
such that it cancels the ResourceHandle. We want to treat switching to a download
like a failure, where WebCore assumes that the load is finished, and no
cancellation is required.

No new tests, tested manually by verifying that downloading files works in
Safari Mac.

* loader/MainResourceLoader.cpp:
(WebCore::MainResourceLoader::continueAfterContentPolicy):
* platform/network/mac/ResourceHandleMac.mm:
(WebCore::ResourceHandle::cancel): Remove the workaround added in r137763.


Canonical link: https://commits.webkit.org/123519@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@138012 268f45cc-cd09-0410-ab3c-d52691b4dbfc